# lox-interpreter

./: Cargo.toml  README.md
src/: ast.rs  intepreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  token.rs
testcase/: 4.lox  a2.lox  a5.lox  a6.lox
