[package]
name = "lox-interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop = "0.19"
lalrpop-util = "0.19"
thiserror = "1.0"  # 用于错误处理
anyhow = "1.0"     # 用于错误传播
lazy_static = "1.4" # 用于定义全局数据结构
